fix(PartupUpdateComments): add correct list spacings

--- a/app/client/stylesheets/components/List.scss
+++ b/app/client/stylesheets/components/List.scss
@@ -27,4 +27,8 @@
             }
         }
     }
+
+    &--partup-update-comments {
+        @include addSpacing(spacing(2));
+    }
 }
