--- a/app/client/stylesheets/components/PartupUpdateComment.scss
+++ b/app/client/stylesheets/components/PartupUpdateComment.scss
@@ -1,5 +1,7 @@
 .pa-PartupUpdateComment {
+    margin-bottom: -4px;
+
     .pa-Avatar {
-        width: 40px;
+        width: 30px;
     }
 }
